ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webservers
spec:
  rules:
    - host: nginx.lab0.sikademo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
    - host: apache.lab0.sikademo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apache
                port:
                  number: 80
